# OpenApi/trainingHub.yaml
@@ -303,10 +303,10 @@ components:
           type: integer
           format: int64
           example: 1
-        course_id:
-          type: integer
-          format: int64
-          example: 10
+#        course_id:
+#          type: integer
+#          format: int64
+#          example: 10
         author:
           type: string
           example: Mr. Ali
@@ -317,10 +317,10 @@ components:
         comment:
           type: string
           example: This course helped me to get me my first job
-        comment_date_time:
-          type: string
-          format: date-time
-          example: 2023-08-15T14:30:00Z
+#        comment_date_time:
+#          type: string
+#          format: date-time
+#          example: 2023-08-15T14:30:00Z
       xml:
         name: comment
       required:
