# src/main/java/com/example/trainingHub/model/Comment.java
@@ -1,0 +1,25 @@
+package com.example.trainingHub.model;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+@Table(name = "comment")
+public class Comment {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+    private Integer course_id;
+    private String author;
+    private int rating;
+    private String comment;
+    private LocalDateTime comment_date_time;
+}
